# automacao

./: .gitignore  README.md  analyzer_factory.py  chrome_test.py  final_test.py  find_tesseract.py  index.html  install_tesseract.ps1  ocr_extract.py  pagina.html  pyproject.toml  requirements.txt  selenium_extractor.py  setup_env.bat  setup_env.ps1  setup_project.ps1  test_debug.py  tool.poetry
automacao_assistente_hibrido/: BUG_FIX_IMAGENS.md  README.md  RESUMO_VISAO.md  VISAO_AVANCADA_IMPLEMENTADA.txt  WORKSPACE_REORGANIZADO.txt  alert_scheduler.py  assistant.py  memory.py  memorystore.py  model_handlers.py  notifications.py  page_content.txt  requirements.txt  script_pip.py  selenium_test_debug.py  setup_env.py  web_app.py  web_to_excel.py
automacao_assistente_hibrido/data/: memory.json
automacao_assistente_hibrido/docs/: .env.example  .env.template  ALERTAS_GUIA.md  GUIA_COMPLETO.md  GUIA_MODELOS_HIBRIDO.md  GUIA_MULTIPLOS_MODELOS.md  GUIA_VISAO_AVANCADA.md  TESTE_SCHEDULER.md
automacao_assistente_hibrido/setup/: fix_windows_task.ps1  recover_alerts.py  setup_telegram.py  setup_test_now.py  setup_windows_task.bat  setup_windows_task.py  setup_windows_task_admin.ps1
automacao_assistente_hibrido/tests/: debug_env.py  debug_model_handlers.py  debug_scheduler.py  debug_vision.py  test_complete_system.py  (+13 more)
doc_analyzer/: .gitignore  README.md  requirements.txt
env/: pyproject.toml
nf_automation/: .gitignore  README.md  requirements.txt
src/: main.py  script.py
standalone/: index.html
templates/: index.html
web_automation/: __init__.py
web_version/: index.html
(+56 files in other folders)
