[tool.poetry]
name = "web-automation"
version = "0.1.0"
description = "Sistema de automação web para análise de documentos e extração de NFs"
authors = ["Julio Soama"]

[tool.poetry.dependencies]
python = "^3.12"
mistralai = "0.0.7"
python-dotenv = "1.0.0"
PyMuPDF = "1.23.8"
pytesseract = "0.3.10"
Pillow = "10.1.0"
customtkinter = "5.2.1"
PyYAML = "6.0.1"
anthropic = "0.7.7"
openai = "1.3.7"
requests = "2.31.0"
python-docx = "1.0.1"
tqdm = "4.66.1"
colorama = "0.4.6"
selenium = "4.15.2"
pandas = "2.1.4"
openpyxl = "3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
